Blocked IP problem

--- a/README
+++ b/README
@@ -20,3 +20,8 @@ A: See: http://www.aschroder.com/2010/05/installing-a-magento-extension-manually
 
 Q: Self test is failing with "Exception message was: Unable to connect via TLS"
 A: Check that you have OpenSSL installed for your PHP environment.
+
+Q: Self test is failing with "Exception message was: 5.7.1 Username and Password not accepted. Learn more at 5.7.1..."
+A: It's actually good advice to learn more here:  http://support.google.com/mail/bin/answer.py?answer=14257. But two things to check: 
+1) that you are really 110% sure you have the right username and password (test it on gmail.com)
+2) If that does work, then Google may have blocked your server IP due to too many wrong passwords. You need to log in to gmail.com _from_ that IP - in order to answer the captcha and allow the IP through again. There's a few ways to do that - SOCKS proxy, X forward a browser, use Lynx.
