tr_TR translation added minor fix in existing translation files non-existing translations added to en_US and tr_TR

--- a/app/locale/en_US/Aschroder_SMTPPro.csv
+++ b/app/locale/en_US/Aschroder_SMTPPro.csv
@@ -37,7 +37,7 @@
 "SMTP Pro Self Test Results","SMTP Pro Self Test Results"
 "Extension disabled, cannot run test.","Extension disabled, cannot run test."
 "Checking config re-writes have not clashed.","Checking config re-writes have not clashed."
-""Detected overwrite conflict: %s","Detected overwrite conflict: %s"
+"Detected overwrite conflict: %s","Detected overwrite conflict: %s"
 "Raw connection test for SMTP options.","Raw connection test for SMTP options."
 "Complete","Complete"
 "Failed to connect to SMTP server. Reason: ","Failed to connect to SMTP server. Reason: "
@@ -70,3 +70,8 @@
 "Required database tables exist.",""
 "Testing complete, if you are still experiencing difficulties please visit <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support.","Testing complete, if you are still experiencing difficulties please visit <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support."
 "Testing failed,  please review the reported problems and if you need further help visit  <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support.","Testing failed,  please review the reported problems and if you need further help visit  <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support."
+"Disabled","Disabled"
+"MailUp Username","MailUp Username"
+"MailUp Password","MailUp Password"
+"Input your MailUp username and password here. For more information visit <a href='http://mailup.com' target='_blank'>MailUp</a>","Input your MailUp username and password here. For more information visit <a href='http://mailup.com' target='_blank'>MailUp</a>"
+"Google Apps or Gmail","Google Apps or Gmail"
