Ru Locale update

--- a/app/locale/ru_RU/Aschroder_SMTPPro.csv
+++ b/app/locale/ru_RU/Aschroder_SMTPPro.csv
@@ -27,9 +27,8 @@
 "Log Emails","Лог-сообщения почты"
 "This will log all outbound emails. View from System->Tools->SMTPPro - Email Log.","Это будет регистрировать все исходящие письма. См. в «Система» > «Инструменты» > «SMTPPro - почтовые логи»."
 "Clean Email Logs","Очистить почтовые логи"
-"If this is set to yes, old entries will be deleted from email log. Cron is required and log cleaning must be enabled in system/log/enabled for this to work.",
-"Если это значение равно «Да», то старые записи будут удалены из лога электронной почты. Требуется Cron и очистка лога должна быть включена в system/log/enabled для того, чтобы это сработало."
-"Email Log Days Kept","Email Log Days Kept"
+"If this is set to yes, old entries will be deleted from email log. Cron is required and log cleaning must be enabled in system/log/enabled for this to work.","Если это значение равно «Да», то старые записи будут удалены из лога электронной почты. Требуется Cron и очистка лога должна быть включена в system/log/enabled для того, чтобы это сработало."
+"Email Log Days Kept","Длительность хранения записи в логе"
 "Enable Debug Logging","Включить ведение отладочного лога"
 "If yes, a log file will be written with debug information to file var/log/aschroder_smtppro.log.","Если да, файл с логом будет записан с отладочной информацией в файл var/log/aschroder_smtppro.log."
 "Save settings before running this test.","Сохранить настройки до запуска этого теста."
@@ -37,7 +36,7 @@
 "Running SMTP Pro Self Test","Выполнение самотестирования SMTP Pro"
 "SMTP Pro Self Test Results","Результаты самотестирования SMTP Pro"
 "Extension disabled, cannot run test.","Расширение отключено, тест не запускается."
-"Checking config re-writes have not clashed.","Checking config re-writes have not clashed."
+"Checking config re-writes have not clashed.","Проверка отсутствия конфликтов при перезаписывании конфигурации."
 "Detected overwrite conflict: %s","Обнаружен конфликт перезаписи: %s"
 "Raw connection test for SMTP options.","Тестировать Raw-соединение для SMTP-опций."
 "Complete","Завершить"
@@ -70,7 +69,7 @@
 "Please try to manually re-run the table creation script. For assistance please contact us.","Попробуйте вручную перезапустить сценарий создания таблицы. Для получения помощи, пожалуйста, свяжитесь с нами."
 "Required database tables exist.","Необходимые таблицы БД существуют."
 "Testing complete, if you are still experiencing difficulties please visit <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support.","Тестирование завершено, если вы все еще испытываете трудности, то посетите <a target='_blank' href='http://magesmtppro.com'>страницу поддержки</a> или свяжитесь со мной <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> для поддержки."
-"Testing failed,  please review the reported problems and if you need further help visit  <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support.", "Тестирование не удалось,  просмотрите описанные проблемы и если вам нужна дополнительная помощь посетите <a target='_blank' href='http://magesmtppro.com'>страницу поддержки</a> или свяжитесь со мной <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> для поддержки."
+"Testing failed,  please review the reported problems and if you need further help visit  <a target='_blank' href='http://magesmtppro.com'>the support page</a> or contact me via <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> for support.","Тестирование не удалось,  просмотрите описанные проблемы и если вам нужна дополнительная помощь посетите <a target='_blank' href='http://magesmtppro.com'>страницу поддержки</a> или свяжитесь со мной <a target='_blank' href='mailto:support@aschroder.com'>support@aschroder.com</a> для поддержки."
 "Disabled","Отключено"
 "MailUp Username","Имя пользователя MailUp"
 "MailUp Password","Пароль MailUp"
